@@ -13,6 +13,7 @@ lib/Acme/MetaSyntactic/kodokan.pm
 lib/Acme/MetaSyntactic/michelin.pm
 lib/Acme/MetaSyntactic/nehi.pm
 lib/Acme/MetaSyntactic/noughts_and_crosses.pm
+lib/Acme/MetaSyntactic/playing_cards.pm
 lib/Acme/MetaSyntactic/shou_dou_qi.pm
 lib/Acme/MetaSyntactic/sodor.pm
 lib/Acme/MetaSyntactic/southpark.pm
